# hebrew-audio-transcriber

./: .gitignore  EXECUTION_GUIDE.md  GITHUB_READY.md  GUI_DESIGN.md  LICENSE  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run.bat  run.ps1  setup.py
docs/: ARCHITECTURE.md  BEST_PRACTICES.md  CONTRIBUTING.md  PROJECT_STRUCTURE.md  REFACTORING_COMPLETE.md  REFACTORING_GUIDE.md  architecture.drawio
speech_to_text/: __init__.py  __main__.py  config.py  hardware_detection.py  main.py
speech_to_text/core/: __init__.py  calibration.py  dependencies.py  transcriber.py  worker.py
speech_to_text/gui/: audio_utils.py  i18n.py  icons.py  main_window.py  main_window.py.bak  steps.py  theme.py  threads.py  widgets.py
speech_to_text/gui/steps/: __init__.py  file_select.py  model_select.py  transcription.py
tests/: __init__.py  conftest.py  test_config.py  test_dependencies.py  test_gui.py  test_hardware_detection.py  test_integration.py  test_main.py  test_transcriber.py
