[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "speech-to-text-transcriber"
version = "2.0.0"
description = "Professional GUI application for audio transcription"
readme = "README.md"
requires-python = ">=3.9"
authors = [{name = "Development Team", email = "dev@example.com"}]
license = {text = "MIT"}

dependencies = [
    "faster-whisper>=0.10.0",
    "PyQt5>=5.15.0",
    "tqdm>=4.60.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-mock>=3.10",
    "black>=22.0",
    "flake8>=4.0",
    "isort>=5.10",
    "mypy>=0.950",
]

[project.urls]
Homepage = "https://github.com/example/speech-to-text"
Repository = "https://github.com/example/speech-to-text.git"
Issues = "https://github.com/example/speech-to-text/issues"

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_mode = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=speech_to_text --cov-report=html --cov-report=term-missing"
